fix overlapping divs preventing star drawing

--- a/src/components/TypingText/typing-text.scss
+++ b/src/components/TypingText/typing-text.scss
@@ -5,6 +5,10 @@
   right: 0;
   bottom: 0;
 
+  width: fit-content;
+  height: fit-content;
+  margin: auto;
+
   font-family: 'Montserrat';
   font-size: 48px;
   text-align: center;
